04_Teste/exercicios_gerados/question_mdp_28_dollar_variavel/version_2/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 8
    $amount       = 7
    ^
SyntaxError: invalid syntax